# pizza_clock

./: .gitignore  .pre-commit-config.yaml  README.md  experiments.ipynb  exploration.ipynb  llc_estimation.ipynb  practice.ipynb  pyproject.toml
src/pizza_clock/: config.py  dataset.py  experiments.py  llc_estimation_utils.py  metrics.py  models.py  training.py
tests/: dataset_test.py  metrics_test.py  model_test.py  training_test.py
